fix overflow

--- a/src/App.less
+++ b/src/App.less
@@ -20,6 +20,7 @@ body,
     }
     .right {
       flex: 1;
+      overflow: auto;
     }
   }
 }
